--- a/cliente/templates/login.html
+++ b/cliente/templates/login.html
@@ -1,22 +1,13 @@
-	<div ng-if ='message_error' class="alert alert-danger alert-dismissible" role="alert" style="text-align:center">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<strong class="text-error" ng-show = "error_login">{{message_error}}</strong>
-	</div>
-  	<div class="page-header"> <h1>Login</h1> </div>
-  	<div class="col-sm-4 col-sm-offset-4">
-	  	<form class="form" >
-	  		<div class="form-group">
-			    <label for="usuario">Usuario</label>
-			    <input required type="text" id="usuario" ng-model = "user" class = "span2 form-control">
-		    </div>
-	  		<div class="form-group">
-			    <label for="password">Password</label>
-			    <input required type="password" id="password" ng-model = "password" class = "span2 form-control">
-		    </div>
-	  		<div class="form-group">
-		    	<button type="button" class="btn btn-success" ng-click = "login()">Login</button>
-		   	</div>
-		</form>
-	</div>
+  <h2> Login </h2>
+
+
+  	<form class="navbar-form">
+	    <label for="usuario">Usuario</label>
+	    <input type="text" id="usuario" ng-model = "user" class = "span2"><br>
+	    <label for="password">Password</label>
+	    <input type="text" id="password" ng-model = "password" class = "span2"><br><br>
+	    
+	    <button type="button" class="btn" ng-click = "login()">Login</button>
+	</form>
 <br>
-  
+  <p class="text-error" ng-show = "error_login">{{message_error}}</p>
