--- a/cliente/templates/promociones.html
+++ b/cliente/templates/promociones.html
@@ -1,53 +1,74 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#/home">Monedero</a>
-    </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li ><a href="#/home">Inicio</a></li>
-      <li><a href="#/altas">Altas</a></li>
-      <li><a href="#/bajas">Bajas</a></li>
-      <li><a href="#/registros">Registros</a></li>
-      <li><a href="#/usuarios">Usuarios</a></li>
-      <li><a href="#/sucursales">Sucursales</a></li>
-      <li class="active"><a href="#/promociones">Promociones</a></li>
-      <li><a href="#/configuraciones">Configuraciones</a></li>
-      </ul>
-    </div>    
-  </div>
-</nav>
-<div ng-if = "message_error" class="alert alert-danger alert-dismissible" role="alert" style="text-align:center">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong id='errores' >{{message_error}}</strong>
-  </div>
-  <div ng-if = "message_ok" class="alert alert-success alert-dismissible" role="alert" style="text-align:center">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong id='correctos' >{{message_ok}}</strong>
-</div>
-<div class="page-header"><h1> Agregar promoión </h1></div>
 
-<div class="col-sm-6 col-sm-offset-3 form">
-  <div class="form-group">
-    <label for="nombre">Nombre promoción:</label>
-    <input class="form-control" id = "nombre" type = "text" ng-model = "promocion.nombre" placeholder = "nombre promoción" /><br>
-  </div>
-  <div class="form-group">
-    <label for="descripcion">descripcion promoción:</label>
-    <input class="form-control" id = "descripcion" type = "text" ng-model = "promocion.descripcion" placeholder = "descripcion" /><br>
-  </div>
-  <div class="form-group">
-    <label for="porcentaje">porcentaje promoción:</label>
-    <input class="form-control" id = "porcentaje" type = "text" ng-model = "promocion.porcentaje" placeholder = "porcentaje" /><br>
-  </div>
-    <label for="contrasenia">Contraseña actual:</label>
-    <input class="form-control" id = "contrasenia" type = "text" ng-model = "promocion.contrasenia" placeholder = "Contraseña actual" /><br>
-  <div class="form-group">
-    <button class="btn btn-default" ng-click = "agregar()"> Agregar promoción </button>
-  </div>
+<h1> Agregar promoción </h1>
+
+<div ng-hide = "editando">
+	<label for="nombre">Nombre promoción:</label>
+
+	<input id = "nombre" type = "text" ng-model = "promocion.nombre" placeholder = "nombre promoción" /><br>
+
+	<label for="descripcion">descripcion promoción:</label>
+
+	<input id = "descripcion" type = "text" ng-model = "promocion.descripcion" placeholder = "descripcion" /><br>
+
+	<label for="porcentaje">porcentaje promoción:</label>
+
+	<input id = "porcentaje" type = "text" ng-model = "promocion.porcentaje" placeholder = "porcentaje" /><br>
+
+	<label for="contrasenia">Contraseña actual:</label>
+
+	<input id = "contrasenia" type = "text" ng-model = "promocion.contrasenia" placeholder = "Contraseña actual" /><br>
+
+	<button ng-click = "agregar()"> Agregar promoción </button>
+
+</div>
+
+<div ng-show = "editando">
+	<label for="nombre">Nombre promoción:</label>
+
+	<input id = "nombre" type = "text" ng-model = "promocion_editando.nombre" placeholder = "nombre promoción" /><br>
+
+	<label for="descripcion">descripción promoción:</label>
+
+	<input id = "descripcion" type = "text" ng-model = "promocion_editando.descripcion" placeholder = "descripcion" /><br>
+
+	<label for="porcentaje">porcentaje promoción:</label>
+
+	<input id = "porcentaje" type = "text" ng-model = "promocion_editando.porcentaje" placeholder = "porcentaje" /><br>
+
+	<label for="contrasenia">Contraseña actual:</label>
+
+	<input id = "contrasenia" type = "text" ng-model = "contrasenia" placeholder = "Contraseña actual" /><br>
+
+	<button ng-click = "guardar()"> Guardar cambios </button>
+	<button ng-click = "eliminar()"> Eliminar promoción </button>
+	<button ng-click = "editando = false"> Cancelar </button>
+
+</div>
+<p class="text-error" ng-if = "message_error">{{message_error}}</p>
+
+<p class="text-success" ng-if = "message_ok">{{message_ok}}</p>
+
+<table class="table table-condensed">
+ 
+	<thead>
+		<tr>
+		<th scope="col">Id</th>
+	 	<th scope="col">Nombre</th>
+		<th scope="col">Descripcion</th>
+	    <th scope="col">Porcentaje</th>
+	   </tr>
+	</thead>
+
+	<tbody>
+	   <tr ng-click = "edita_promocion($index)" ng-repeat = "promocion in promociones track by $index">
+
+			<td>{{promocion.id_promocion}}</td>
+	     	<td>{{promocion.nombre}}</td>
+			<td>{{promocion.descripcion}}</td>
+	     	<td>{{promocion.porcentaje}}%</td>
+
+	   </tr>
+
+	</tbody>
+
+</table>
