--- a/cliente/templates/registros.html
+++ b/cliente/templates/registros.html
@@ -1,44 +1,31 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#/home">Monedero</a>
-    </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="#/home">Inicio</a></li>
-        <li><a href="#/altas">Altas</a></li>
-        <li><a href="#/bajas">Bajas</a></li>
-        <li class="active"><a href="#/registros">Registros</a></li>
-        <li><a href="#/usuarios">Usuarios</a></li>
-        <li><a href="#/sucursales">Sucursales</a></li>
-        <li><a href="#/promociones">Promociones</a></li>
-        <li><a href="#/configuraciones">Configuraciones</a></li>
-      </ul>
-    </div>    
-  </div>
-</nav>
-<div class="page-header"><h1>Registros</h1></div>
-<div class="col-sm-10 col-sm-offset-1">
-	<table class="table table-striped">
-		<thead>
-			<tr>
-			<th scope="col">Id monedero</th>
-		 	<th scope="col">Id usuario</th>
-			<th scope="col">Monto</th>
-		    <th scope="col">Fecha transaccion</th>
-		</thead>
-		<tbody>
-		   <tr ng-repeat = "registro in transacciones track by $index">
+
+<h1> Registros </h1>
+
+<label for="id_monedero">Id monedero:</label>
+<input type = "text" id = "id_monedero" ng-model = "filtro.id_monedero" placeholder = "id monedero" ng-change = "actualiza_datos()"/><br>
+
+<label for="fecha">fecha:</label>
+<input type = "text" ng-model = "filtro.fecha" placeholder = "fecha"  ng-change = "actualiza_datos()"/><br>
+
+<table class="table table-condensed">
+ 
+	<thead>
+		<tr>
+		<th scope="col">Id monedero</th>
+	 	<th scope="col">Id usuario</th>
+		<th scope="col">Monto</th>
+	    <th scope="col">Fecha transaccion</th>
+	   </tr>
+	</thead>
+
+	<tbody>
+	   <tr ng-repeat = "registro in transacciones track by $index">
 			<td>{{registro.id_monedero}}</td>
 	     	<td>{{registro.id_usuario}}</td>
-			<td>{{registro.monto| number:2}}</td>
+			<td>{{registro.monto| currency:'$':2}}</td>
 	     	<td>{{registro.fecha_transaccion }}</td>
-		</tbody>
-	</table>
-</div>
+
+	   </tr>
+	</tbody>
+
+</table>
