--- a/cliente/templates/sucursales.html
+++ b/cliente/templates/sucursales.html
@@ -1,52 +1,67 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#/home">Monedero</a>
-    </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li ><a href="#/home">Inicio</a></li>
-      <li><a href="#/altas">Altas</a></li>
-      <li><a href="#/bajas">Bajas</a></li>
-      <li><a href="#/registros">Registros</a></li>
-      <li><a href="#/usuarios">Usuarios</a></li>
-      <li class="active"><a href="#/sucursales">Sucursales</a></li>
-      <li><a href="#/promociones">Promociones</a></li>
-      <li><a href="#/configuraciones">Configuraciones</a></li>
-      </ul>
-    </div>    
-  </div>
-</nav>
-<div ng-if = "message_error" class="alert alert-danger alert-dismissible" role="alert" style="text-align:center">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong id='errores' >{{message_error}}</strong>
-  </div>
-  <div ng-if = "message_ok" class="alert alert-success alert-dismissible" role="alert" style="text-align:center">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong id='correctos' >{{message_ok}}</strong>
+
+<h1> Sucursales </h1>
+
+<div ng-hide = "sucursal_editando_status">
+	<label for="id_sucursal">Id de sucursal:</label>
+
+	<input id = "id_sucursal" type = "text" ng-model = "sucursal.id_sucursal" placeholder = "id de sucursal" /><br>
+
+	<label for="nombre">Nombre de sucursal:</label>
+
+	<input id = "nombre" type = "text" ng-model = "sucursal.nombre" placeholder = "nombre de sucursal" /><br>
+
+	<label for="direccion">Dirección de sucursal:</label>
+
+	<input id = "direccion" type = "text" ng-model = "sucursal.direccion" placeholder = "Dirección de la sucursal" /><br>
+
+	<label for="contrasenia">Contraseña actual:</label>
+
+	<input id = "contrasenia" type = "text" ng-model = "sucursal.contrasenia" placeholder = "Contraseña actual" /><br>
+
+	<button ng-click = "agrega()"> Agregar sucursal </button>
 </div>
-<div class="page-header"><h1> Sucursales </h1></div>
-<div class="col-sm-6 col-sm-offset-3 form">
-  <div class="form-group">
-    <label for="id_sucursal">Id de sucursal:</label>
-    <input class="form-control" id = "id_sucursal" type = "text" ng-model = "sucursal.id_sucursal" placeholder = "id de sucursal" />
-  </div> 
-  <div class="form-group"> 
-    <label for="nombre">Nombre de sucursal:</label>
-    <input class="form-control" id = "nombre" type = "text" ng-model = "sucursal.nombre" placeholder = "nombre de sucursal" />
-  </div> 
-    <label for="direccion">Dirección de sucursal:</label>
-    <input class="form-control" id = "direccion" type = "text" ng-model = "sucursal.direccion" placeholder = "Dirección de la sucursal" />
-  <div class="form-group">
-    <label for="contrasenia">Contraseña actual:</label>
-    <input class="form-control" id = "contrasenia" type = "text" ng-model = "sucursal.contrasenia" placeholder = "Contraseña actual" />
-  </div>
-  <div class="form-group">
-    <button class="btn btn-default" ng-click = "agrega()"> Agregar sucursal </button>
-  </div>
+
+<div ng-show = "sucursal_editando_status">
+
+
+	<label for="nombre">Nombre de sucursal:</label>
+
+	<input id = "nombre" type = "text" ng-model = "sucursal_editando.nombre_sucursal" placeholder = "nombre de sucursal" /><br>
+
+	<label for="direccion">Dirección de sucursal:</label>
+
+	<input id = "direccion" type = "text" ng-model = "sucursal_editando.direccion" placeholder = "Dirección de la sucursal" /><br>
+
+	<label for="contrasenia">Contraseña actual:</label>
+
+	<input id = "contrasenia" type = "text" ng-model = "contrasenia" placeholder = "Contraseña actual" /><br>
+
+	<button ng-click = "guardar_cambios()"> Guardar cambios </button>
+	<button ng-click = "eliminar_sucursal()"> Eliminar sucursal</button>
+	<button ng-click = "cancelar()"> Cancelar </button>
+
+
+</div>
+
+<p class="text-error" ng-show = "message_error">{{message_error}}</p>
+<p class="text-success" ng-if = "message_ok">{{message_ok}}</p>
+
+<table class="table table-condensed">
+ 
+	<thead>
+		<tr>
+		<th scope="col">Id</th>
+	 	<th scope="col">Nombre</th>
+		<th scope="col">Direccion</th>
+	   </tr>
+	</thead>
+
+	<tbody>
+	   <tr ng-repeat = "sucursal in sucursales track by $index" ng-click = "click_sucursal($index)">
+				<td >{{sucursal.id_sucursal}}</td>
+		     	<td>{{sucursal.nombre_sucursal}}</td>
+				<td>{{sucursal.direccion}}</td>
+	   </tr>
+	</tbody>
+
+</table>
