--- a/cliente/templates/altas.html
+++ b/cliente/templates/altas.html
@@ -1,35 +1,53 @@
 
-<h1> Alta de monedero electronico </h1>
-
-<label for="id_monedero">id monedero:</label>
-
-<input id = "id_monedero" type = "text" ng-model = "persona.id_monedero" placeholder = "id_monedero" /><br>
-
-<label for="nombre">Nombre del propietario:</label>
-
-<input id = "nombre" type = "text" ng-model = "persona.nombre" placeholder = "nombre" /><br>
-
-<label for="apellido_paterno">Apellido paterno:</label>
-
-<input id = "apellido_paterno" type = "text" ng-model = "persona.apellido_paterno" placeholder = "apellido paterno" /><br>
-
-<label for="apellido_materno">Apellido materno:</label>
-
-<input id = "apellido_materno" type = "text" ng-model = "persona.apellido_materno" placeholder = "apellido materno" /><br>
-
-<label for="telefono">Telefono:</label>
-
-<input id = "telefono" type = "text" ng-model = "persona.telefono" placeholder = "apellido materno" /><br>
-
-<label for="correo">Correo electrónico:</label>
-
-<input id = "correo" type = "text" ng-model = "persona.correo" placeholder = "apellido materno" /><br>
-
-<label for="fecha">Fecha de nacimiento:</label>
-
-<input id = "fecha" type = "text" ng-model = "persona.fecha_nacimiento" placeholder = "fecha de nacimiento" /><br>
-
-<button ng-click = "activar()"> Activar </button>
-
+<div class="jumbotron">
+	<h1> Alta de monedero electronico </h1>
+</div>
+<div class="row">
+	<form action="" class="form form-horizontal col-sm-6 col-sm-offset-3 text-center">
+		<div class="form-group">
+			<label class="control-label col-sm-4" for="id_monedero">id monedero:</label>
+			<div class="col-sm-8">
+				<input class="form-control" id = "id_monedero" type = "text" ng-model = "persona.id_monedero" placeholder = "id_monedero" />
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-4" for="nombre">Nombre del propietario:</label>
+			<div class="col-sm-8">
+				<input class="form-control" id = "nombre" type = "text" ng-model = "persona.nombre" placeholder = "nombre" />
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-4" for="apellido_paterno">Apellido paterno:</label>
+			<div class="col-sm-8">
+				<input class="form-control" id = "apellido_paterno" type = "text" ng-model = "persona.apellido_paterno" placeholder = "apellido paterno" />
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-4" for="apellido_materno">Apellido materno:</label>
+			<div class="col-sm-8">
+				<input class="form-control" id = "apellido_materno" type = "text" ng-model = "persona.apellido_materno" placeholder = "apellido materno" />
+			</div>
+		</div>		
+		<div class="form-group">
+			<label class="control-label col-sm-4" for="telefono">Telefono:</label>
+			<div class="col-sm-8">
+				<input class="form-control" id = "telefono" type = "text" ng-model = "persona.telefono" placeholder = "apellido materno" />
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-4" for="correo">Correo electrónico:</label>
+			<div class="col-sm-8">
+				<input class="form-control" id = "correo" type = "text" ng-model = "persona.correo" placeholder = "apellido materno" />
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-4" for="fecha">Fecha de nacimiento:</label>
+			<div class="col-sm-8">
+				<input class="form-control" id = "fecha" type = "text" ng-model = "persona.fecha_nacimiento" placeholder = "fecha de nacimiento" />
+			</div>
+		</div>
+		<button class="btn btn-success" ng-click = "activar()"> Activar </button>
+	</form>
+</div>
 <p class="text-error" ng-if = "message_error">{{message_error}}</p>
 <p class="text-success" ng-if = "message_ok">{{message_ok}}</p>
