--- a/cliente/templates/bajas.html
+++ b/cliente/templates/bajas.html
@@ -1,14 +1,21 @@
 
-
-<label for="id_monedero">Id del monedero: </label>
-
-<input id = "id_monedero" type = "text" ng-model = "id_monedero" placeholder = "id_monedero" /><br>
-
-<label for="contrasenia">Contraseña: </label>
-
-<input id = "contrasenia" type = "text" ng-model = "contrasenia" placeholder = "contrasenia" /><br>
-
-<button ng-click = "desactivar()">Desactivar </button>
+<div class="jumbotron">
+	<h1> Desabilitar monedero </h1>
+</div>
+<div class="row">
+	<form action="" class="form form-horizontal col-sm-4 col-sm-offset-4 text-center">
+		<div class="form-group">
+			<label for="id_monedero">Id del monedero: </label>
+			<input class="form-control" id = "id_monedero" type = "text" ng-model = "id_monedero" placeholder = "id_monedero" />
+		</div>
+		<div class="form-group">
+			<label for="contrasenia">Contraseña: </label>
+			<input class="form-control" id = "contrasenia" type = "text" ng-model = "contrasenia" placeholder = "contrasenia" />
+		</div>
+		<button ng-click = "desactivar()">Desactivar </button>
+		</div>
+	</form>
+</div>			
 
 <p class="text-error" ng-if = "message_error">{{message_error}}</p>
 <p class="text-success" ng-if = "message_ok">{{message_ok}}</p>
