--- a/cliente/templates/configuraciones.html
+++ b/cliente/templates/configuraciones.html
@@ -1,11 +1,9 @@
-
-
-<h1> Configuraciones </h1>
-<h3> Configuración extra </h3>
-
+<div class="jumbotron">
+	<h1> Configuraciones </h1>
+</div>
 <br>
-<ul>
-  <li><a href = "#/configuraciones/parametros">Parametros de alerta </a> </li>
-
-
-<ul>
+<div class="text-center">
+	<ul class="">
+	  <a class="sindeco" href = "#/configuraciones/parametros"><li class="configuracion">Parametros de alerta  </li></a>
+	<ul>
+</div>
