--- a/cliente/templates/home.html
+++ b/cliente/templates/home.html
@@ -1,36 +1,41 @@
 
 <div ng-if = "login_ok">
-
-	<h2> Bienvenido </h2>
-
- 	<label for="id_monedero">Id monedero:</label>
-	<input type = "text" ng-model = "monedero.id_monedero" ng-change = "obten_persona_monedero()" id = "id_monedero" placeholder = "monedero" /><br>
-
-	<div ng-if = "datos_ok">
-		Propietario: 
-			{{apellido_pat + ' ' + apellido_mat + ' ' + nombre}}
-			<br>
-			Monto en el monedero: {{monto}}
-
+	<div class="jumbotron">
+		<h1> Bienvenido </h1>
 	</div>
+	<div class="row text-center">
+		<form class="form col-sm-4 col-sm-offset-4">
+			<div class="form-group">
+			 	<label for="id_monedero">Id monedero:</label>
+				<input class='form-control' type = "text" ng-model = "monedero.id_monedero" ng-change = "obten_persona_monedero()" id = "id_monedero" placeholder = "monedero" />
+			</div>
+			<div ng-if = "datos_ok">
+				Propietario: 
+					{{apellido_pat + ' ' + apellido_mat + ' ' + nombre}}
+					<br>
+					Monto en el monedero: {{monto}}
+			</div>
+			<div class="form-group">
+			 	<label for="monto">Monto:</label>
+				<input class="form-control" id = "monto" type = "text" ng-change = "limpia_mensaje()">
+			</div> 
+				<ng-model = "monedero.monto" placeholder = "monto" />
+			<div class="form-group">
+			 	<label for="promocion">Promoción:</label>
+			   <select class="form-control" id = "promocion" ng-change = "obten_promocion()" ng-model="promociones.select">
+			      <option  ng-repeat="option in promociones.data" value="{{option.id_promocion}}">{{option.descripcion}}</option>
+			    </select>
+			</div>    
 
- 	<label for="monto">Monto:</label>
+				<div ng-if = "promo_seleccionada.porcentaje && monedero.monto">
+					Monto a agregar aplicando el {{promo_seleccionada.porcentaje}}% <br>
+					${{(monedero.monto * (promo_seleccionada.porcentaje / 100))}}
 
-	<input id = "monto" type = "text" ng-change = "limpia_mensaje()" ng-model = "monedero.monto" placeholder = "monto" /><br>
-    
- 	<label for="promocion">Promoción:</label>
-
-    <select id = "promocion" ng-change = "obten_promocion()" ng-model="promociones.select">
-      <option  ng-repeat="option in promociones.data" value="{{option.id_promocion}}">{{option.descripcion}}</option>
-    </select><br>
-
-	<div ng-if = "promo_seleccionada.porcentaje && monedero.monto">
-		Monto a agregar aplicando el {{promo_seleccionada.porcentaje}}% <br>
-		${{(monedero.monto * (promo_seleccionada.porcentaje / 100))}}
-
-	</div>
-	<button ng-click ="agrega()" > + </button> <button ng-click ="quita()" > - </button>
-	<br><br>
+				</div>
+				<button class="btn btn-default btn-home" ng-click ="agrega()" > + </button> <button class="btn btn-default btn-home" ng-click ="quita()" > - </button>
+				<br><br>
+		</form>
+	</div>	
   	<p class="text-error" ng-if = "message_error">{{message_error}}</p>
   	<p class="text-success" ng-if = "message_ok">{{message_ok}}</p>
 
