--- a/cliente/templates/login.html
+++ b/cliente/templates/login.html
@@ -1,13 +1,17 @@
-  <h2> Login </h2>
+  <div class="jumbotron text-center"> <h1>Monedero Electronico Impulsatec</h1><h2>LOGIN</h2> </div>
 
-
-  	<form class="navbar-form">
-	    <label for="usuario">Usuario</label>
-	    <input type="text" id="usuario" ng-model = "user" class = "span2"><br>
-	    <label for="password">Password</label>
-	    <input type="text" id="password" ng-model = "password" class = "span2"><br><br>
-	    
-	    <button type="button" class="btn" ng-click = "login()">Login</button>
-	</form>
+	<div class="row text-center">
+	  	<form id="form-login" class="form col-sm-4 col-sm-offset-4">
+	  		<div class="form-group">
+			    <label for="usuario">Usuario</label>
+			    <input class="form-control" type="text" id="usuario" ng-model = "user" class = "span2">
+		    </div>
+		    <div class="form-group">
+			    <label for="password">Password</label>
+			    <input class="form-control" type="password" id="password" ng-model = "password" class = "span2">
+		    </div>
+		    <button class="btn btn-primary" type="button" class="btn" ng-click ="login()">Login</button>
+		</form>
+	</div>
 <br>
-  <p class="text-error" ng-show = "error_login">{{message_error}}</p>
+<p class="text-error" ng-show = "error_login">{{message_error}}</p>
