--- a/cliente/templates/parametros.html
+++ b/cliente/templates/parametros.html
@@ -1,12 +1,14 @@
+<div class="jumbotron">
+	<h1> Configuraciones </h1>
+	<h3> Parametros de alerta </h3>
+</div>
 
-<h1> Configuraciones </h1>
-<h3> Parametros de alerta </h3>
-
-<br>
-<h3> Escriba el parametro de alerta para la sucursal </h3><br>
-
-<input type = "text" ng-model = "parametro" /><br>
-<button ng-click = "guardar_parametro()"> Guardar parametro </button>
-
+<form class="form col-sm-4 col-sm-offset-4 text-center">
+	<h3> Escriba el parametro de alerta para la sucursal </h3>
+	<div class="form-group">
+		<input class="form-control" type = "text" ng-model = "parametro" />
+	</div>
+	<button class="btn btn-success" ng-click = "guardar_parametro()"> Guardar parametro </button>
+</form>
 <p class="text-error" ng-if = "message_error">{{message_error}}</p>
 <p class="text-success" ng-if = "message_ok">{{message_ok}}</p>
