--- a/cliente/templates/promociones.html
+++ b/cliente/templates/promociones.html
@@ -1,74 +1,73 @@
-
-<h1> Agregar promoción </h1>
-
+<div class="jumbotron">
+	<h1>Promociones </h1>
+</div>
 <div ng-hide = "editando">
-	<label for="nombre">Nombre promoción:</label>
-
-	<input id = "nombre" type = "text" ng-model = "promocion.nombre" placeholder = "nombre promoción" /><br>
-
-	<label for="descripcion">descripcion promoción:</label>
-
-	<input id = "descripcion" type = "text" ng-model = "promocion.descripcion" placeholder = "descripcion" /><br>
-
-	<label for="porcentaje">porcentaje promoción:</label>
-
-	<input id = "porcentaje" type = "text" ng-model = "promocion.porcentaje" placeholder = "porcentaje" /><br>
-
-	<label for="contrasenia">Contraseña actual:</label>
-
-	<input id = "contrasenia" type = "text" ng-model = "promocion.contrasenia" placeholder = "Contraseña actual" /><br>
-
-	<button ng-click = "agregar()"> Agregar promoción </button>
-
+	<div class="row">
+		<form class="form text-center col-sm-6 col-sm-offset-3">
+			<div class="form-group">
+				<label for="nombre">Nombre promoción:</label>
+				<input class="form-control" id = "nombre" type = "text" ng-model = "promocion.nombre" placeholder = "nombre promoción" />
+			</div>
+			<div class="form-group">
+				<label for="descripcion">descripcion promoción:</label>
+				<input class="form-control" id = "descripcion" type = "text" ng-model = "promocion.descripcion" placeholder = "descripcion" />
+			</div>
+			<div class="form-group">
+				<label for="porcentaje">porcentaje promoción:</label>
+				<input class="form-control" id = "porcentaje" type = "text" ng-model = "promocion.porcentaje" placeholder = "porcentaje" />
+			</div>
+			<div class="form-group">
+				<label for="contrasenia">Contraseña actual:</label>
+				<input class="form-control" id = "contrasenia" type = "text" ng-model = "promocion.contrasenia" placeholder = "Contraseña actual" />
+			</div>
+			<button class="btn btn-success" ng-click = "agregar()"> Agregar promoción </button>
+		</form>
+	</div>		
 </div>
-
+<br>
 <div ng-show = "editando">
-	<label for="nombre">Nombre promoción:</label>
-
-	<input id = "nombre" type = "text" ng-model = "promocion_editando.nombre" placeholder = "nombre promoción" /><br>
-
-	<label for="descripcion">descripción promoción:</label>
-
-	<input id = "descripcion" type = "text" ng-model = "promocion_editando.descripcion" placeholder = "descripcion" /><br>
-
-	<label for="porcentaje">porcentaje promoción:</label>
-
-	<input id = "porcentaje" type = "text" ng-model = "promocion_editando.porcentaje" placeholder = "porcentaje" /><br>
-
-	<label for="contrasenia">Contraseña actual:</label>
-
-	<input id = "contrasenia" type = "text" ng-model = "contrasenia" placeholder = "Contraseña actual" /><br>
-
-	<button ng-click = "guardar()"> Guardar cambios </button>
-	<button ng-click = "eliminar()"> Eliminar promoción </button>
-	<button ng-click = "editando = false"> Cancelar </button>
-
+	<div class="row">
+		<form class="form text-center col-sm-6 col-sm-offset-3">
+			<div class="form-group">
+				<label for="nombre">Nombre promoción:</label>
+				<input class="form-control" id = "nombre" type = "text" ng-model = "promocion_editando.nombre" placeholder = "nombre promoción" />
+			</div>
+			<div class="form-group">
+				<label for="descripcion">descripción promoción:</label>
+				<input class="form-control" id = "descripcion" type = "text" ng-model = "promocion_editando.descripcion" placeholder = "descripcion" />
+			</div>
+			<div class="form-group">
+				<label for="porcentaje">porcentaje promoción:</label>
+				<input class="form-control" id = "porcentaje" type = "text" ng-model = "promocion_editando.porcentaje" placeholder = "porcentaje" />
+			</div>
+			<div class="form-group">
+				<label for="contrasenia">Contraseña actual:</label>
+				<input class="form-control" id = "contrasenia" type = "text" ng-model = "contrasenia" placeholder = "Contraseña actual" />
+			</div>
+			<button class="btn btn-success" ng-click = "guardar()"> Guardar cambios </button>
+			<button class="btn btn-danger" ng-click = "eliminar()"> Eliminar promoción </button>
+			<button class="btn btn-warning" ng-click = "editando = false"> Cancelar </button>
+		</form>
+	</div>
 </div>
+<br>
 <p class="text-error" ng-if = "message_error">{{message_error}}</p>
-
 <p class="text-success" ng-if = "message_ok">{{message_ok}}</p>
-
-<table class="table table-condensed">
- 
-	<thead>
-		<tr>
-		<th scope="col">Id</th>
-	 	<th scope="col">Nombre</th>
-		<th scope="col">Descripcion</th>
-	    <th scope="col">Porcentaje</th>
-	   </tr>
-	</thead>
-
-	<tbody>
-	   <tr ng-click = "edita_promocion($index)" ng-repeat = "promocion in promociones track by $index">
-
-			<td>{{promocion.id_promocion}}</td>
-	     	<td>{{promocion.nombre}}</td>
-			<td>{{promocion.descripcion}}</td>
-	     	<td>{{promocion.porcentaje}}%</td>
-
-	   </tr>
-
-	</tbody>
-
-</table>
+<div class="table-responsive col-sm-10 col-sm-offset-1">
+	<table class="table table-condensed">
+		<thead>			
+			<th scope="col">Id</th>
+		 	<th scope="col">Nombre</th>
+			<th scope="col">Descripcion</th>
+		    <th scope="col">Porcentaje</th>		   
+		</thead>
+		<tbody>
+		   <tr ng-click = "edita_promocion($index)" ng-repeat = "promocion in promociones track by $index">
+				<td>{{promocion.id_promocion}}</td>
+		     	<td>{{promocion.nombre}}</td>
+				<td>{{promocion.descripcion}}</td>
+		     	<td>{{promocion.porcentaje}}%</td>
+		   </tr>
+		</tbody>
+	</table>
+</div>
