--- a/cliente/templates/usuarios.html
+++ b/cliente/templates/usuarios.html
@@ -1,57 +1,58 @@
-
-<h1> Usuarios </h1>
-
+<div class="jumbotron">
+	<h1> Usuarios </h1>
+</div>
 <div ng-hide = "muestra_info_ok">
-
-	<label for="nombre">Nombre del usuario:</label>
-
-	<input id = "nombre" type = "text" ng-model = "persona.nombre" placeholder = "nombre" /><br>
-
-	<label for="apellido">Apellido del usuario:</label>
-
-	<input id = "apellido" type = "text" ng-model = "persona.apellido" placeholder = "apellido" /><br>
-
-	<label for="contrasenia">Contrasenia del usuario:</label>
-
-	<input id = "contrasenia" type = "text" ng-model = "persona.password" placeholder = "Contraseña del usuario" /><br>
-
-	<label for="verifica">Verifica la contraseña:</label>
-
-	<input id = "verifica" type = "text" ng-model = "persona.verifica" placeholder = "Verifica la contraseña" /><br>
-
-	<label for="contrasenia_usuario">Contrasenia de usuario actual:</label>
-
-	<input id = "contrasenia_usuario" type = "text" ng-model = "contrasenia_usuario" placeholder = "Contraseña del usuario" /><br>
-
-	<button ng-click = "registrar_usuario()"> Registrar usuario </button>
-
+	<div class="row">
+		<form class="form text-center col-sm-6 col-sm-offset-3">
+			<div class="form-group">
+				<label for="nombre">Nombre del usuario:</label>
+				<input class="form-control" id = "nombre" type = "text" ng-model = "persona.nombre" placeholder = "nombre" />
+			</div>
+			<div class="form-group">
+				<label for="apellido">Apellido del usuario:</label>
+				<input class="form-control" id = "apellido" type = "text" ng-model = "persona.apellido" placeholder = "apellido" />
+			</div>
+			<div class="form-group">
+				<label for="contrasenia">Contrasenia del usuario:</label>
+				<input class="form-control" id = "contrasenia" type = "text" ng-model = "persona.password" placeholder = "Contraseña del usuario" />
+			</div>
+			<div class="form-group">
+				<label for="verifica">Verifica la contraseña:</label>
+				<input class="form-control" id = "verifica" type = "text" ng-model = "persona.verifica" placeholder = "Verifica la contraseña" />
+			</div>
+			<div class="form-group">
+				<label for="contrasenia_usuario">Contrasenia de usuario actual:</label>
+				<input class="form-control" id = "contrasenia_usuario" type = "text" ng-model = "contrasenia_usuario" placeholder = "Contraseña del usuario" />
+			</div>
+			<button class="btn btn-success" ng-click = "registrar_usuario()"> Registrar usuario </button>
+		</form>
+	</div>		
 </div>
 
 <div ng-show = "muestra_info_ok">
-
-	<label for="nombre">Nombre del usuario:</label>
-
-	<input id = "nombre" type = "text" ng-model = "usuario_editando.nombre" placeholder = "nombre" /><br>
-
-	<label for="apellido">Apellido del usuario:</label>
-
-	<input id = "apellido" type = "text" ng-model = "usuario_editando.apellido_pat" placeholder = "apellido" /><br>
-
-	<label for="contrasenia">Contrasenia del usuario:</label>
-
-	<input id = "contrasenia" type = "text" ng-model = "usuario_editando.password" placeholder = "Contraseña del usuario" /><br>
-
-
-	<label for="contrasenia_usuario">Contrasenia de usuario actual:</label>
-
-	<input id = "contrasenia_usuario" type = "text" ng-model = "contrasenia_usuario" placeholder = "Contraseña del usuario" /><br>
-
-	<button ng-click = "guardar_cambios()"> Guardar cambios </button>
-
-	<button ng-click = "eliminar_usuario()"> Eliminar usuario </button>
-
-	<button ng-click = "cancelar()"> Cancelar </button>
-
+	<div class="row">
+		<form class="form text-center col-sm-6 col-sm-offset-3">
+			<div class="form-group">
+				<label for="nombre">Nombre del usuario:</label>
+				<input class="form-control" id = "nombre" type = "text" ng-model = "usuario_editando.nombre" placeholder = "nombre" />
+			</div>
+			<div class="form-group">
+				<label for="apellido">Apellido del usuario:</label>
+				<input class="form-control" id = "apellido" type = "text" ng-model = "usuario_editando.apellido_pat" placeholder = "apellido" />
+			</div>
+			<div class="form-group">
+				<label for="contrasenia">Contrasenia del usuario:</label>
+				<input class="form-control" id = "contrasenia" type = "text" ng-model = "usuario_editando.password" placeholder = "Contraseña del usuario" />
+			</div>
+			<div class="form-group">
+				<label for="contrasenia_usuario">Contrasenia de usuario actual:</label>
+				<input class="form-control" id = "contrasenia_usuario" type = "text" ng-model = "contrasenia_usuario" placeholder = "Contraseña del usuario" />	
+			</div>	
+			<button class="btn btn-success" ng-click = "guardar_cambios()"> Guardar cambios </button>
+			<button class="btn btn-danger" ng-click = "eliminar_usuario()"> Eliminar usuario </button>
+			<button class="btn btn-warning" ng-click = "cancelar()"> Cancelar </button>
+		</form>
+	</div>
 </div>
 
 
@@ -62,24 +63,21 @@
 
 <br>
 
-<table class="table table-condensed">
- 
-	<thead>
-		<tr>
-		<th scope="col">Id</th>
-	 	<th scope="col">Nombre</th>
-		<th scope="col">Apellido</th>
-	    <th scope="col">Contraseña</th>
-	   </tr>
-	</thead>
-
-	<tbody>
-	   <tr ng-repeat = "usuario in usuarios track by $index" ng-click = "click_usuario($index)">
-				<td >{{usuario.id_usuario}}</td>
-		     	<td>{{usuario.nombre}}</td>
-				<td>{{usuario.apellido_pat}}</td>
-		     	<td>{{usuario.password}}</td>
-	   </tr>
-	</tbody>
-
-</table>
+<div class="table-responsive col-sm-10 col-sm-offset-1">
+	<table class="table table-condensed">
+		<thead>
+			<th scope="col">Id</th>
+		 	<th scope="col">Nombre</th>
+			<th scope="col">Apellido</th>
+		    <th scope="col">Contraseña</th>
+		</thead>
+		<tbody>
+		   <tr ng-repeat = "usuario in usuarios track by $index" ng-click = "click_usuario($index)">
+					<td >{{usuario.id_usuario}}</td>
+			     	<td>{{usuario.nombre}}</td>
+					<td>{{usuario.apellido_pat}}</td>
+			     	<td>{{usuario.password}}</td>
+		   </tr>
+		</tbody>
+	</table>
+</div>
