--- a/cliente/css/style.css
+++ b/cliente/css/style.css
@@ -1,12 +1,33 @@
+body{
+	background-image: url("../img/background.jpg");
+}
 .jumbotron{
-	background-color: #8BB5F4;
+	background-color: rgba(250,250,250,0.8);
 	padding: 0px 0px;
 	margin-bottom: 10px;
-	margin-left: 20px;
-	margin-right: 20px;
+	/*margin-left: 20px;*/
+	margin-right: -10px;
 	text-align: center;
-	border-radius: 15px 15px;
-	color: white;
+	/*border-radius: 15px 15px;*/
+	color: #32689B;
+}
+.navbar-brand img{
+	margin-top: -10px;
+	display: inline-block;
+}
+.ma{
+	position: fixed;
+	right: 0px;
+	bottom: 20px;
+	width: 120px;
+	z-index: 99;
+	opacity: 0.5;
+}
+#cont{
+	margin-top: 70px;
+}
+.btn{
+	font-size: 1.2em;
 }
 .btn-home{
 	font-size: 1.9em;
@@ -14,9 +35,19 @@
 }
 .form{
 	margin-top: 15px;
+	color: #32689B;
+	font-size: 1.15em;
+}
+.form-control{
+	background: rgba(255,255,255,0.9);
+	height: 45px;
+	color: #32689B;
+	font-size: 1.05em;
+	text-align: center;
+
 }
 .table{
-	background-color: #D9E0EA;
+	background-color: rgba(250,250,250,0.8);
 	border-radius: 10px 10px;
 	padding: 20px;
 }
@@ -26,7 +57,7 @@ td,th{
 .configuracion{
 	width: 250px;
 	height: 100px;
-	background-color: #8BB5F4;
+	background-color: #32689B;
 	border-radius: 10px;
 	text-align: center;
 	list-style: none;
@@ -43,4 +74,22 @@ a.sindeco:hover{
 ul{
 	display: inline-block;
 	padding-left: 0px;
+}
+#salir{
+	color: #EF7979;
+	font-size: 1.2em;
+}
+.navbar-default{
+	font-size: 1.2em;
+	background: rgba(250,250,250,0.9);
+}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover{
+	background: #A4C5DE;
+	color: white;
+}
+.alert{
+	width: 80%;
+	margin-left: 10%;
+	z-index: 99;
+	font-size: 1.3em;
 }
