--- a/cliente/templates/home.html
+++ b/cliente/templates/home.html
@@ -1,13 +1,23 @@
 
+
 <div ng-if = "login_ok">
 	<div class="jumbotron">
 		<h1> Bienvenido </h1>
 	</div>
+	<div ng-if = "message_error" class="alert alert-warning alert-dismissible" role="alert">
+	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	  <p class="text-center">{{message_error}}</p>
+	</div>
+	<div ng-if = "message_ok" class="alert alert-success alert-dismissible" role="alert">
+	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	  <p class="text-center" >{{message_ok}}</p>
+	</div>
+	
 	<div class="row text-center">
 		<form class="form col-sm-4 col-sm-offset-4">
 			<div class="form-group">
 			 	<label for="id_monedero">Id monedero:</label>
-				<input class='form-control' type = "text" ng-model = "monedero.id_monedero" ng-change = "obten_persona_monedero()" id = "id_monedero" placeholder = "monedero" />
+				<input required class='form-control' type = "text" ng-model = "monedero.id_monedero" ng-change = "obten_persona_monedero()" id = "id_monedero" placeholder = "monedero" />
 			</div>
 			<div ng-if = "datos_ok">
 				Propietario: 
@@ -17,27 +27,22 @@
 			</div>
 			<div class="form-group">
 			 	<label for="monto">Monto:</label>
-				<input class="form-control" id = "monto" type = "text" ng-change = "limpia_mensaje()">
+				<input required class="form-control" id = "monto" type = "text" ng-change = "limpia_mensaje()" ng-model = "monedero.monto" placeholder = "monto"/>
 			</div> 
-				<ng-model = "monedero.monto" placeholder = "monto" />
+				
 			<div class="form-group">
 			 	<label for="promocion">Promoción:</label>
-			   <select class="form-control" id = "promocion" ng-change = "obten_promocion()" ng-model="promociones.select">
-			      <option  ng-repeat="option in promociones.data" value="{{option.id_promocion}}">{{option.descripcion}}</option>
-			    </select>
+			   	<select class="form-control" id = "promocion" ng-change = "obten_promocion()" ng-model="promociones.select">
+      				<option  ng-repeat="option in promociones.data" value="{{option.id_promocion}}">{{option.descripcion}}</option>
+    			</select>
 			</div>    
 
 				<div ng-if = "promo_seleccionada.porcentaje && monedero.monto">
 					Monto a agregar aplicando el {{promo_seleccionada.porcentaje}}% <br>
 					${{(monedero.monto * (promo_seleccionada.porcentaje / 100))}}
-
 				</div>
 				<button class="btn btn-default btn-home" ng-click ="agrega()" > + </button> <button class="btn btn-default btn-home" ng-click ="quita()" > - </button>
 				<br><br>
 		</form>
 	</div>	
-  	<p class="text-error" ng-if = "message_error">{{message_error}}</p>
-  	<p class="text-success" ng-if = "message_ok">{{message_ok}}</p>
-
-
 </div>
