--- a/cliente/templates/registros.html
+++ b/cliente/templates/registros.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="form-group">
 			<label for="fecha">fecha:</label>
-			<input class="form-control" type = "date" ng-model = "filtro.fecha" placeholder = "fecha"  ng-change = "actualiza_datos()"/>
+			<input class="form-control" type = "text" ng-model = "filtro.fecha" placeholder = "fecha"  ng-change = "actualiza_datos()"/>
 		</div>
 	</form>
 </div>
